--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>name.simongrondin</groupId>
     <artifactId>es-string-length-analyzer</artifactId>
-    <version>2.2</version>
+    <version>2.4</version>
     <packaging>jar</packaging>
     <inceptionYear>2016</inceptionYear>
 
@@ -32,8 +32,8 @@
     </scm>
 
     <properties>
-        <elasticsearch.version>2.2.1</elasticsearch.version>
-        <lucene.version>5.4.1</lucene.version>
+        <elasticsearch.version>2.4.1</elasticsearch.version>
+        <lucene.version>5.5.2</lucene.version>
         <elasticsearch.assembly.descriptor>${project.basedir}/src/main/resources/plugin-metadata/plugin-assembly.xml</elasticsearch.assembly.descriptor>
         <elasticsearch.plugin.classname>org.elasticsearch.plugin.analysis.stringlength.AnalysisStringLengthPlugin</elasticsearch.plugin.classname>
         <elasticsearch.plugin.name>es-string-length-analyzer</elasticsearch.plugin.name>
@@ -109,6 +109,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>4.1.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -132,6 +139,7 @@
                     </includes>
                     <systemProperties>
                         <tests.security.manager>false</tests.security.manager>
+                        <jna.nosys>true</jna.nosys>
                     </systemProperties>
                 </configuration>
             </plugin>
